--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-react": "^7.8.3",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^3.4.2",
     "html-webpack-inline-source-plugin": "0.0.10",
